--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <img src="https://lh3.googleusercontent.com/proxy/x2tVC4WVfelWqoAnOB7olrZxJM_V7A_unzvRynht8xic5PsiJX_XdSAWAS7GcWZRyNdmSKu7LqIYKGVhrqCnS8NHBCZtWbeCTageXfyk8sRaY4FxUWI0NJu6USszvYMP56AUeJwOiO2sBhbWEr7h59UkJmFnFNKkbHdakFK9cSFO0ZO9L8KX"width="15%" height="15%">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MJU WEB</title>
 </head>
 <body>
-    
+    <img src="images" alt="" srcset="">
 </body>
 </html>
